=== Testimonials Widget ===

== Changelog ==

= trunk =

= 2.12.8 =
* Add filter `testimonials_widget_cite_html` to adjust cite contents - Thank you [Dimitrios](http://visualweb.gr/) for the suggestion
* BUGFIX Warning: Illegal string offset 'exclude'
* Replace __ with esc_html__
* Update Premium features

= 2.12.7 =
* BUGFIX Link targets affected page navigation
* Removed donate monthly show code

= 2.12.6 =
* BUGFIX If no refresh_interval, then LIMIT 1
* Change donate from $1 to $2 due to fees
* Dashboard testimonials count statistics
* Display donate on major/minor version release or if it's been a month
* Remove braces from simple if/else structures
* Settings page inheritance note
* Update premium features listing
* Use donate button than text

= 2.12.5 =
* BUGFIX Correct loose vs strict comparison for intval and absint
* If no refresh_interval, then LIMIT 1

= 2.12.4 =
* BUGFIX Settings jQuery UI Tabs conflict
* NOT BUG [WPML bug](http://wordpress.org/support/topic/wpml-bug?replies=1)
* Remove settings.css
* Settings about section height fix
* TODOs update
* Update Premium product page URL
* Update WPML configuration
* Use PayPal donate image in settings

= 2.12.3 =
* BUGFIX Import option constantly overrides settings 
* BUGFIX [Error When Database Does Not Exist Yet](http://wordpress.org/support/topic/error-when-database-does-not-exist-yet)

= 2.12.2 =
* $1 donation link admin_notice on installation or major/minor update
* Add forum responses cheat sheet
* Auto flush URLs if archive or testimonial slugs change
* BUGFIX Respect attribute settings by preventing reset_defaults and importexport activating on front-end
* Convert slug, slugs, and term setting items to lowercase on save
* Correctly delete all testimonials options on delete
* Don't create class instance unless plugin is activated
* FEATURE Allow for custom post type categories and tags [Idea via crdunst](http://wordpress.org/support/topic/feedback-tagscategories?replies=3#post-4160839)